--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div id=toc></div>
                     <div class="alert alert-warning"
                         role=alert><i class="fa fa-warning"></i> <b>Important: </b>These docs are undergoing contruction!</div>
-                    <h2 id=installation>What is BetterDiscord?</h2>
+                    <h2 id=betterdiscord>BetterDiscord?</h2>
                     <p>BetterDiscord is in continuous development and new features get added daily! it is a HUGE enhancement to <a href=https://discordapp.com/>Discord</a>. With custom Plugins and Themes you can have a Discordapp that is on steroids! Stay tuned on updates by <a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd>joining the official server</a>!
                     <h2 id=installation>Installation</h2>
                     <h3 id=windows>Windows</h3>
