--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                     <h3 id=windows>Windows</h3>
                     <ul>
                         <li>
-                            <p><a href=/install_win.html>How to install on Windows</a></ul>
+                            <p><a href=/BetterDiscord/install_win.html>How to install on Windows</a></ul>
                     <h3 id=linux>Mac</h3>
                     <ul>
                         <li>
-                            <p><a href=/install_mac.html>How to install on Mac</a></ul>
+                            <p><a href=/BetterDiscord/install_mac.html>How to install on Mac</a></ul>
                     <h3 id=mac>Linux</h3>
                     <ul>
                         <li><a href=/BetterDiscord/install_linux.html>How to install on Linux</a></ul>
