--- a/install_mac.html
+++ b/install_mac.html
@@ -164,7 +164,7 @@
                     <p><b>Disclaimer:</b> You will have to re-install BetterDiscord everytime there is a big Discord update. How do you know if it's a big update? On the start of Discord it will start downloading the update unlike a mini update.</blockquote>
                 <h2
                     id=installation>Installation</h2>
-                    <p>First thing first head on over to the <a href=https://github.com/iVEnoVaLue/BetterPlugins/tree/master/app/OSX/Installer>Github</a> site.</p>
+                    <p>First thing first head on over to the <a href=https://github.com/iVEnoVaLue/BetterPlugins/tree/master/app/OSX/Installer target=_blank>Github</a> site.</p>
                     <br>
                     <p>I can't help with the rest as I don't have a mac if you would like to volunteer to help with this installation for mac users PM me @Omniscient in the BetterDiscord server.
                         <h2 id=updates>Updates</h2>
