--- a/news_archive/index.html
+++ b/news_archive/index.html
@@ -127,6 +127,8 @@
                             <h3>This year's posts</h3>
                             <ul class="this">
                                 <li>
+                                    <time>July 22</time><a href="https://0mniscient.github.io/BetterDiscord/news/07_22_2016.html">BetterDiscord Linux Beta Launch</a></li>
+                                <li>
                                     <time>July 11</time><a href="https://0mniscient.github.io/BetterDiscord/news/07_11_2016.html">BetterDiscord v0.2.81 Launch</a></li>
                                 <li>
                                     <time>May 6</time><a href="https://0mniscient.github.io/BetterDiscord/news/05_06_2016.html">BetterDiscord v0.2.8 Launch</a></li>
