--- a/install_linux.html
+++ b/install_linux.html
@@ -174,7 +174,7 @@
                     <li>
                         <p>Launch terminal on Linux and run <code>npm-install</code>
                             <li>
-                                <p>Download and install Electron-Prebuilt from <a href=http://electron.atom.io/releases/ target=_blank>Electron</a>.</ul>
+                                <p>Download and install the latest Elctron from the <a href=http://electron.atom.io/releases/ target=_blank>Electron Website</a>.</ul>
                                       <p>After you have finished the installation change the <code>utils</code> import in the <code>BetterDiscord.js</code> files.</p>
                                       <ul>
                                           <li>
