--- a/betterdiscord_troubleshoot.html
+++ b/betterdiscord_troubleshoot.html
@@ -160,25 +160,32 @@
                 <div class=tocexpanded id=toc></div>
                 <h2 id=FAQ>FAQ</h2>
                 <p>Answers to frequently asked questions.
-                  <h2 id=No_Install>BetterDiscord not installing!</h2>
-                  <p>BetterDiscord is in continuous development with bug fixes and improvement and at the moment it seems to be an uncommon glitch all we can say is keep trying to install! :(
-                    <h2 id=No_Settings>Can't Access Settings</h2>
-                    <p>How to access Discords settings manually because of a theme/plugin problem.
-                        <ul>
-                            <li>
-                                <p>Step 1: Do CTRL+, on your keyboard
-                                    <li>
-                                        <p>Step 2: Disable/Remove the recently added Plugin/Theme/CSS
-                                            <li>
-                                                <p>Step 3: Do CTRL+R on your keyboard</ul>
-                                        <h2 id=Emotes_Update>When will BetterDiscord emotes be updated?</h2>
-                                        <p>BTTV emotes are updated weekly by EhsanKia from the BetterDiscord server
-                                            <ul>
+                    <h2 id=No_Install>BetterDiscord not installing!</h2>
+                    <p>BetterDiscord is in continuous development with bug fixes and improvement and at the moment it seems to be an uncommon glitch all we can say is keep trying to install! :(
+                        <h2 id=No_Settings>Can't Access Settings</h2>
+                        <p>How to access Discords settings manually because of a theme/plugin problem.
+                            <ul>
+                                <li>
+                                    <p>Step 1: Do CTRL+, on your keyboard
+                                        <li>
+                                            <p>Step 2: Disable/Remove the recently added Plugin/Theme/CSS
                                                 <li>
-                                                    <p>You can check <a href=https://github.com/Jiiks/BetterDiscordApp/tree/master/data>here</a> if it has been updated the file is called <code>emotedata_bttv.json</code></ul>
-                                            <h2 id=blacklisted_emotes>Why are some emotes not showing up?</h2>
-                                            <p>We as a community hate emotes getting in our sentences without wanting to put them there so we have decided to blacklisted them.
-                                                <ul>
+                                                    <p>Step 3: Do CTRL+R on your keyboard</ul>
+                            <h2 id=bttv_update>BTTV Emotes Updates</h2>
+                            <p>BTTV emotes are updated <b>weekly</b> by <b>EhsanKia</b> from the BetterDiscord server
+                                <ul>
+                                    <li>
+                                        <p>You can check <a href=https://github.com/Jiiks/BetterDiscordApp/blob/master/data/emotedata_bttv.json target=_blank>here</a> if the emotes have been updated.</ul>
+                                <h2 id=bttv_update>FFZ Emotes Updates</h2>
+                                <p>FFZ emotes are updated <b>weekly</b> by <b>Pohky</b> from the BetterDiscord server
+                                    <ul>
+                                        <li>
+                                            <p>You can check <a href=https://github.com/Jiiks/BetterDiscordApp/blob/master/data/emotedata_ffz.json target=_blank>here</a> if the emotes have been updated.</ul>
+                                    <h2 id=blacklisted_emotes>Blacklisted Emotes</h2>
+                                    <p>We as a community hate emotes getting in our sentences without wanting to put them there so we have decided to blacklisted them.
+                                        <ul>
+                                            <li>
+                                                <p>Want to check if an emote has been blacklisted? Check <a href=https://github.com/Jiiks/BetterDiscordApp/blob/master/data/emotefilter.json target=_blank>here</a>.
                                                     <li>
                                                         <p>3 letter emotes are blacklisted. LUL converts to LUUL
                                                             <li>
