--- a/install_linux.html
+++ b/install_linux.html
@@ -187,7 +187,7 @@
 it would be
 <font color=#859900>var</font> _utils = <font color=#268bd2>require</font>(<font color=#2aa198>"./Utils"</font>);</code></div></pre></ul>.
                 <h2 id=updates>Updates</h2>
-                <p>It is a self updating launcher no reinstalling!
+                <p>Any time there is an update for BetterDiscord all you have to do is restart Discord to install it!
                     <div class=tags><b>Tags: </b><a href=/install_mac.html class="btn btn-default cursorNorm navbar-btn" role=button>install_mac</a> <a href=/install_win.html class="btn btn-default cursorNorm navbar-btn" role=button>install_win</a> <a href=/install_mac.html
                             class="btn btn-default cursorNorm navbar-btn" role=button>install_mac</a></div>
                     </div>
