--- a/install_mac.html
+++ b/install_mac.html
@@ -170,7 +170,7 @@
                 <br>
                 <p>I can't help with the rest as I don't have a mac if you would like to volunteer to help with this installation for Mac users PM me @Omniscient in the BetterDiscord server.
                     <h2 id=updates>Updates</h2>
-                    <p>Every time there is an update for BetterDiscord you will have to download the new version and do this process again I know it's a pain I'm sorry :(
+                    <p>Any time there is an update for BetterDiscord all you have to do is restart Discord to install it!
                         <div class=tags><b>Tags: </b><a href=/install_mac.html class="btn btn-default cursorNorm navbar-btn" role=button>install_mac</a> <a href=/install_win.html class="btn btn-default cursorNorm navbar-btn" role=button>install_win</a> <a href=/install_linux.html
                                 class="btn btn-default cursorNorm navbar-btn" role=button>install_linux</a></div>
             </div>
