--- a/install_win.html
+++ b/install_win.html
@@ -179,7 +179,7 @@
                             <p>Now you have installed BetterDiscord congratulations!</li>
                         <p><img alt="BetterDiscord on Discord" src=http://i.imgur.com/QQDYIvm.png>
                             <h2 id=updates>Updates</h2>
-                            <p>Every time there is an update for BetterDiscord you will have to download the new version and do this process again I know it's a pain I'm sorry :(
+                            <p>Any time there is an update for BetterDiscord all you have to do is restart Discord to install it!
                                 <div class=tags><b>Tags: </b><a href=/install_win.html class="btn btn-default cursorNorm navbar-btn" role=button>install_win</a> <a href=/install_mac.html class="btn btn-default cursorNorm navbar-btn"
                                         role=button>install_mac</a> <a href=/install_linux.html class="btn btn-default cursorNorm navbar-btn" role=button>install_linux</a></div>
             </div>
