--- a/betterdiscord_troubleshoot.html
+++ b/betterdiscord_troubleshoot.html
@@ -110,7 +110,8 @@
                                         <li><a href=/BetterDiscord/install_linux.html>Installing on Linux</a></ul>
                             <li><a href=#>How to use</a>
                                 <ul>
-                                    <li><a href=/BetterDiscord/plugin_api.html>PluginAPI</a></ul>
+                                    <li><a href=/BetterDiscord/plugin_api.html>PluginAPI</a>
+                                    <li><a href=/BetterDiscord/emotes.html>Emotes</a></ul>
                                 <li><a href=#>Troubleshooting</a>
                                     <ul>
                                         <li><a href=/BetterDiscord/theme_troubleshoot.html>Themes</a>
