--- a/install_mac.html
+++ b/install_mac.html
@@ -111,7 +111,8 @@
                             <li><a href=#>How to use</a>
                                 <ul>
 
-                                    <li><a href=/BetterDiscord/plugin_api.html>PluginAPI</a></ul>
+                                    <li><a href=/BetterDiscord/plugin_api.html>PluginAPI</a>
+                                    <li><a href=/BetterDiscord/emotes.html>Emotes</a></ul>
                                 <li><a href=#>Troubleshooting</a>
                                     <ul>
                                         <li><a href=/BetterDiscord/theme_troubleshoot.html>Themes</a>
