--- a/emotes.html
+++ b/emotes.html
@@ -272,8 +272,12 @@
                   <ul><li>Hover over an emote and click the star</li>
                     <img src=https://i.imgur.com/wKEvAhv.gif></img>
                     <li>Now you will have a list of your favorite emotes!</li>
-                    <img src=https://i.imgur.com/03nhWjv.gif></img>
+                    <img src=https://i.imgur.com/03nhWjv.gif></img></ul>
                 <h2 id=modifiers>Modifiers</h2>
+                <p>What are modifiers? Basically they are emote extensions to make them do interesting things as seen below.</p>
+                  <ul>
+                    <li>
+                      Please keep in mind spamming emotes with modifiers will badly <b>lag</b> your Discord client!</li></ul>
                 <table>
                     <thead>
                         <tr>
